# xlm-core

./: .darglint  .env  .flake8  .gitignore  .gitmodules  CONTRIBUTING.md  PR_MESSAGE_SAFE.md  README.md  README_pcdd.md  backup_models.txt  configs  design.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  versions.json
.cursor/plans/: mauve_post-hoc_xlm-core_d28d0b72.plan.md
.cursor/rules/: conda-env.mdc
.github/: PULL_REQUEST_TEMPLATE.md  release.py  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_model.md  new_task.md  question.md
.github/workflows/: docs-release.yml  docs.yml  publish.yml  release.yml  tests.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/TODOs/: index.html
0.1/external-model-list/: index.html
0.3/: 404.html  index.html  sitemap.xml
0.3/TODOs/: index.html
0.3/external-model-list/: index.html
0.3/models/: index.html
0.3/search/: search_index.json
assets/: xlm_wildcard_gif.html
configs/lightning_train/: config.yaml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/TODOs/: index.html
dev/external-model-list/: index.html
dev/models/: index.html
dev/search/: search_index.json
docs/: TODOs.md  external-model-list.md  index.md
docs/developers/: dependencies.md  releasing.md
examples/: .xlm_models
latest/: 404.html  index.html  sitemap.xml
notebooks/: debug_owt.ipynb  loading_sudoku_data.ipynb
requirements/: build_hydra.sh  core_requirements.txt  dev_requirements.txt  docs_requirements.txt  extra_requirements.txt  lint_requirements.txt  llm_eval.txt  mauve_text.txt  molgen_requirements.txt  plotting_requirements.txt  safe_extra.txt  test_requirements.txt
scripts/: submit_generate.py  submit_train.py
tests/: conftest.py  datamodule_helpers.py  test_fsdp_grouping.py  test_github_release.py  todo.md
wiki/: CONTRIBUTING.md  DREAM_TODOs.md  EXTERNAL_MODELS.md  LLMs.md  README.md  building-docs.md  datapipeline.md  eval.md  integration_tests.md  model-loading-for-inference.md  releasing.md  running_tests.md
xlm-models/: .xlm_models  README.md  setup.py  version.py  xlm_models.json
(+1434 files in other folders)
