# We are still using setup.py based build system but we need this file for the config of black

[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
# https://github.com/psf/black
line-length = 79
target-version = ["py37"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv*|.svn|_build|buck-out|build|dist|__pycache__)"


[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["xlm"]

[tool.coverage.report]
show_missing = true
fail_under = 90


[tool.mypy]
allow_redefinition = true
disable_error_code = ["override"]

# some module specific settings
[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true