# We are still using setup.py based build system but we need this file for the config of black

[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
# https://github.com/psf/black
line-length = 79
target-version = ["py37"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv*|.svn|_build|buck-out|build|dist|__pycache__)"


[tool.coverage.paths]
source = ["src", "xlm-models"]

[tool.coverage.run]
branch = true
source = ["xlm", "arlm", "mlm", "ilm", "mdlm", "flexmdm"]

[tool.coverage.report]
show_missing = true


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a GPU",
    "cli: marks CLI / subprocess integration tests",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "ddp: marks tests that spawn multiple processes for DDP",
    "slurm: marks integration tests that submit a SLURM job (sbatch)",
]
addopts = "-v --tb=short --cov=xlm --cov=arlm --cov=mlm --cov=ilm --cov=mdlm --cov=flexmdm --cov-report=html:htmlcov --cov-report=term-missing"


[tool.mypy]
allow_redefinition = true
disable_error_code = ["override"]

# some module specific settings
[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true